// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dropdown > should render 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="dialog"
    data-testid="dropdown__toggle"
  >
    <div
      class="cursor-pointer outline-none focus:outline-none"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown > should render a bottom position 1`] = `
<div>
  <div
    aria-controls=":r1h:"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-testid="dropdown__toggle"
  >
    <div
      class="cursor-pointer outline-none focus:outline-none"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown > should render a bottom-left position 1`] = `
<div>
  <div
    aria-controls=":r1k:"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-testid="dropdown__toggle"
  >
    <div
      class="cursor-pointer outline-none focus:outline-none"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown > should render a large one 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="dialog"
    data-testid="dropdown__toggle"
  >
    <div
      class="cursor-pointer outline-none focus:outline-none"
    >
      <div>
        <div
          style="height: 20px; width: 20px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown > should render a left position 1`] = `
<div>
  <div
    aria-controls=":r1n:"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-testid="dropdown__toggle"
  >
    <div
      class="cursor-pointer outline-none focus:outline-none"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown > should render a small one 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="dialog"
    data-testid="dropdown__toggle"
  >
    <div
      class="cursor-pointer outline-none focus:outline-none"
    >
      <div>
        <div
          style="height: 10px; width: 10px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown > should render a top 1`] = `
<div>
  <div
    aria-controls=":r1t:"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-testid="dropdown__toggle"
  >
    <div
      class="cursor-pointer outline-none focus:outline-none"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown > should render a top-left position 1`] = `
<div>
  <div
    aria-controls=":r1q:"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-testid="dropdown__toggle"
  >
    <div
      class="cursor-pointer outline-none focus:outline-none"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown > should render a top-right 1`] = `
<div>
  <div
    aria-controls=":r20:"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-testid="dropdown__toggle"
  >
    <div
      class="cursor-pointer outline-none focus:outline-none"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown > should render dropdown group options with divider, icon and secondary label 1`] = `
<div>
  <div
    aria-controls=":r23:"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-testid="dropdown__toggle"
  >
    <div
      class="cursor-pointer outline-none focus:outline-none"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown > should render toggle icon 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="dialog"
    data-testid="dropdown__toggle"
  >
    <div
      class="cursor-pointer outline-none focus:outline-none"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown > should render with custom toggle content as function 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="dialog"
    data-testid="dropdown__toggle"
  >
    <div>
      Dropdown is open: 
    </div>
  </div>
</div>
`;

exports[`Dropdown > should render with custom toggle content as react element 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="dialog"
    data-testid="dropdown__toggle"
  >
    <div>
      custom toggle
    </div>
  </div>
</div>
`;

exports[`Dropdown > should render with options 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="dialog"
    data-testid="dropdown__toggle"
  >
    <div
      class="cursor-pointer outline-none focus:outline-none"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown > should render without options one 1`] = `
<div>
  <div
    aria-controls=":r26:"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-testid="dropdown__toggle"
  >
    <div
      class="cursor-pointer outline-none focus:outline-none"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        />
      </div>
    </div>
  </div>
</div>
`;
